--- a/iot_smarthome/android/app/src/main/AndroidManifest.xml
+++ b/iot_smarthome/android/app/src/main/AndroidManifest.xml
@@ -6,12 +6,19 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:label="iot_smarthome"
+        android:label="IoT SmartHome"
         android:name="${applicationName}"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
-        
+        <meta-data
+        android:name="androidx.biometric.auth.default_title"
+        android:value="Xác thực vân tay"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
