--- a/iot_smarthome/pubspec.yaml
+++ b/iot_smarthome/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   syncfusion_flutter_charts: ^31.1.21
   flutter_staggered_grid_view: ^0.4.1
   flutter_datetime_picker_plus: ^2.2.0
+  flutter_advanced_avatar: ^1.5.2
+  convex_bottom_bar: ^3.2.0
+  shared_preferences: ^2.5.3
+  settings_ui: ^2.0.2
   file_picker: ^10.3.3
+  flutter_tts: ^4.2.3
   http: ^1.5.0
   #kf_drawer: ^1.2.1
   uuid: ^4.5.1
@@ -43,8 +48,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  speech_to_text: ^7.3.0
+  local_auth: ^2.3.0
+  flutter_secure_storage: ^9.2.4
+  qr_flutter: ^4.1.0
+  qr_code_tools: ^0.2.0
+  image_gallery_saver_plus: ^4.0.1
+  share_plus: ^7.0.1
+  path_provider: ^2.1.1
+  firebase_messaging: ^16.0.3
+  flutter_slidable: ^4.0.3
+  intl: ^0.20.2
+  flutter_local_notifications: ^19.4.2
+  qr_code_scanner:
+    git:
+      url: https://github.com/juliuscanute/qr_code_scanner.git
+  flutter_timer_countdown: ^1.0.7
+  haptic_feedback: ^0.5.1
+  awesome_notifications: ^0.10.1
 
 dev_dependencies:
+  permission_handler: ^11.3.1
   flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
@@ -62,7 +86,12 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/lotties/
     - assets/lotties/Home.json
+    - assets/lotties/smarthome.json
+    - assets/lotties/voice.json
+    - assets/lotties/recording.json
+    - assets/lotties/fingerprinter.json
     - assets/images/banner_homepage.png
 
   fonts:
