--- a/iot_smarthome/android/app/src/main/AndroidManifest.xml
+++ b/iot_smarthome/android/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="IoT SmartHome"
         android:name="${applicationName}"
@@ -19,6 +23,10 @@
         <meta-data
         android:name="androidx.biometric.auth.default_title"
         android:value="Xác thực vân tay"/>
+        <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyD8kN0WgRkO6xJ0xxxxxxUABO5Zt4yLqk" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -43,9 +51,15 @@
     </application>
 
     <queries>
-        <intent>
-            <action android:name="android.intent.action.PROCESS_TEXT"/>
-            <data android:mimeType="text/plain"/>
-        </intent>
+            <package android:name="com.facebook.katana" /> <!-- App Facebook -->
+            <intent>
+                <action android:name="android.intent.action.PROCESS_TEXT"/>
+                <data android:mimeType="text/plain"/>
+            </intent>
+            <intent>
+                <action android:name="android.intent.action.SENDTO" />
+                <data android:scheme="mailto" />
+            </intent>
     </queries>
+
 </manifest>
