--- a/iot_smarthome/pubspec.yaml
+++ b/iot_smarthome/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   #kf_drawer: ^1.2.1
   uuid: ^4.5.1
   
-  lottie: ^3.3.1
+  lottie: ^3.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -58,7 +58,12 @@ dependencies:
   path_provider: ^2.1.1
   firebase_messaging: ^16.0.3
   flutter_slidable: ^4.0.3
+  device_info_plus: ^12.2.0
   intl: ^0.20.2
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  rxdart: ^0.28.0
+  flutter_map: ^8.2.2
   flutter_local_notifications: ^19.4.2
   qr_code_scanner:
     git:
@@ -66,19 +71,23 @@ dependencies:
   flutter_timer_countdown: ^1.0.7
   haptic_feedback: ^0.5.1
   awesome_notifications: ^0.10.1
-
+  url_launcher: ^6.3.2
+  package_info_plus: ^8.0.0
+  influxdb_client: ^2.11.0
+  google_maps_flutter: ^2.13.1
 dev_dependencies:
   permission_handler: ^11.3.1
   flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icons/home.png"
+  image_path: "assets/icons/logo.png"
   min_sdk_android: 21
   remove_alpha_ios: true
-  flutter_lints: ^5.0.0
+  
 
 flutter:
   uses-material-design: true
