--- a/iot_smarthome/pubspec.yaml
+++ b/iot_smarthome/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   settings_ui: ^2.0.2
   file_picker: ^10.3.3
   flutter_tts: ^4.2.3
+  flutter_riverpod: ^3.0.3
   http: ^1.5.0
   #kf_drawer: ^1.2.1
   uuid: ^4.5.1
@@ -52,7 +53,7 @@ dependencies:
   local_auth: ^2.3.0
   flutter_secure_storage: ^9.2.4
   qr_flutter: ^4.1.0
-  qr_code_tools: ^0.2.0
+  qr_code_tools: ^0.2.0   
   image_gallery_saver_plus: ^4.0.1
   share_plus: ^7.0.1
   path_provider: ^2.1.1
@@ -65,6 +66,7 @@ dependencies:
   rxdart: ^0.28.0
   flutter_map: ^8.2.2
   flutter_local_notifications: ^19.4.2
+
   qr_code_scanner:
     git:
       url: https://github.com/juliuscanute/qr_code_scanner.git
